--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "devDependencies": {
     "cypress": "^10.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "vite": "^2.9.9"
   }
 }
